--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,9 +5,5 @@
     ".github/workflows/*"
   ],
 
-  "enabledManagers": ["terraform", "docker-compose"],
-  
-  "docker-compose": {
-    "managerFilePatterns": ["/portainer/terraform/compose/.*\\.ya?ml$", "/portainer/terraform/compose/*"]
-  }
+  "enabledManagers": ["terraform", "docker-compose"]
 }
