--- a/portainer/stacks/sonarr_pgsql/docker-compose.yml
+++ b/portainer/stacks/sonarr_pgsql/docker-compose.yml
@@ -18,9 +18,9 @@ services:
       /bin/bash -c "
       docker-entrypoint.sh postgres &
       rm -f /initialised.txt || true &&
-      until pg_isready -U postgres; do sleep 3; done &&
-      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE 'sonarr-main';" || true &&
-      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE 'sonarr-log';" || true &&
+      until pg_isready -U ${PG_USER}; do sleep 3; done &&
+      psql -U ${PG_USER} -d postgres -c 'CREATE DATABASE \"sonarr-main\";' || true &&
+      psql -U ${PG_USER} -d postgres -c 'CREATE DATABASE \"sonarr-log\";' || true &&
       echo done > /initialised.txt &&
       wait"
     networks:
