--- a/portainer/stacks/sonarr_pgsql/docker-compose.yml
+++ b/portainer/stacks/sonarr_pgsql/docker-compose.yml
@@ -14,15 +14,15 @@ services:
       interval: "10s"
       timeout: "5s"
       retries: "5"
-    entrypoint: >
-      /bin/bash -c "
+    entrypoint: |
+      /bin/bash -c '
       docker-entrypoint.sh postgres &
       rm -f /initialised.txt || true &&
       until pg_isready -U ${PG_USER}; do sleep 3; done &&
-      psql -U ${PG_USER} -d postgres -c 'CREATE DATABASE \"sonarr-main\";' || true &&
-      psql -U ${PG_USER} -d postgres -c 'CREATE DATABASE \"sonarr-log\";' || true &&
+      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE \"sonarr-main\";" || true &&
+      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE \"sonarr-log\";" || true &&
       echo done > /initialised.txt &&
-      wait"
+      wait'
     networks:
       - prod_network
 
