--- a/portainer/stacks/sonarr_pgsql/docker-compose.yml
+++ b/portainer/stacks/sonarr_pgsql/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       docker-entrypoint.sh postgres &
       rm -f /initialised.txt || true &&
       until pg_isready -U ${PG_USER}; do sleep 3; done &&
-      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE sonarr-main;" || true &&
+      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE sonarrmain;" || true &&
       psql -U ${PG_USER} -d postgres -c "CREATE DATABASE sonarrlog;" || true &&
       echo done > /initialised.txt &&
       wait'
