--- a/portainer/stacks/sonarr_pgsql/docker-compose.yml
+++ b/portainer/stacks/sonarr_pgsql/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "10004:5432"
     healthcheck:
-      test: ["CMD-SHELL", "cat /initialised.txt && pg_isready -U ${PG_USER}"]
+      test: ["CMD-SHELL", "cat /initialised.txt && pg_isready -U test"]
       interval: "10s"
       timeout: "5s"
       retries: "5"
