deploy pgsql for sonarr

--- a/portainer/stacks/sonarr_pgsql/docker-compose.yml
+++ b/portainer/stacks/sonarr_pgsql/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "10004:5432"
     healthcheck:
-      test: "cat /initialised.txt && pg_isready -U ${PG_USER}"
+      test: "cat /initialised.txt && pg_isready -U '${PG_USER}'"
       interval: "10s"
       timeout: "5s"
       retries: "5"
@@ -19,8 +19,8 @@ services:
       docker-entrypoint.sh postgres &
       rm -f /initialised.txt || true &&
       until pg_isready -U ${PG_USER}; do sleep 3; done &&
-      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE sonarrmain;" || true &&
-      psql -U ${PG_USER} -d postgres -c "CREATE DATABASE sonarrlog;" || true &&
+      psql -U ${PG_USER} -d postgres -c 'CREATE DATABASE "sonarr-main";' || true &&
+      psql -U ${PG_USER} -d postgres -c 'CREATE DATABASE "sonarr-log";' || true &&
       echo done > /initialised.txt &&
       wait'
     networks:
