--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,6 +9,7 @@
 
   "packageRules": [
     {
+      "matchManagers": ["docker-compose"],
       "description": "Automatically merge minor and patch-level updates",
       "matchUpdateTypes": ["minor", "patch", "digest"],
       "automerge": true
