--- a/portainer/stacks/qbittorrent/docker-compose.yml
+++ b/portainer/stacks/qbittorrent/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     environment:
       - TZ=Europe/Lisbon
     volumes:
-      - /volume2/docker/qbittorrent/volumes/data:/config:rw
-      - /volume2/docker/qbittorrent/volumes/data:/data:rw
+      - /volume2/docker/qbittorrent/volumes/config:/config:rw
+      - /volume1/data:/data:rw
     ports:
       - 10002:8080
       - 10003:6881
