try portainer tf version 1.4.4

--- a/portainer/stacks/cloudflared_lis_prod/docker-compose.yml
+++ b/portainer/stacks/cloudflared_lis_prod/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       TUNNEL_TOKEN: ${TUNNEL_TOKEN}
     command: tunnel run
     networks:
-      - prod_network
+      - prod_net
 
 networks:
-  prod_network:
+  prod_net:
     external: true
