try portainer tf version 1.4.4

--- a/portainer/stacks/vaultwarden/docker-compose.yml
+++ b/portainer/stacks/vaultwarden/docker-compose.yml
@@ -24,9 +24,9 @@ services:
     ports:
       - 10001:80
     networks:
-      - prod_network
+      - prod_net
 
 networks:
-  prod_network:
+  prod_net:
     external: true
       
