--- a/portainer/stacks/cloudflared_lis_isp/docker-compose.yml
+++ b/portainer/stacks/cloudflared_lis_isp/docker-compose.yml
@@ -9,15 +9,24 @@ services:
     command: tunnel run
     networks:
       vlan1:
-          ipv4_address: "192.168.1.65"
+        ipv4_address: "192.168.1.65"
+    #networks:
+    #  vlan1:
+    #     ipv4_address: "192.168.1.65"
+
 networks:
   vlan1:
-    driver: macvlan
-    driver_opts:
-      parent: eth0.1
-    ipam:
-      driver: default
-      config:
-        - subnet: 192.168.1.0/24
-          ip_range: 192.168.1.64/27
-          gateway: 192.168.1.254
+    external: true
+
+#networks:
+#  vlan1:
+#    driver: macvlan
+#    driver_opts:
+#      parent: eth0.1
+#    ipam:
+#      driver: default
+#      config:
+#        - subnet: 192.168.1.0/24
+#          ip_range: 192.168.1.64/27
+#          gateway: 192.168.1.254
+#
