--- a/portainer/stacks/immich/docker-compose.yml
+++ b/portainer/stacks/immich/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       POSTGRES_USER: ${PG_USER}
       POSTGRES_PASSWORD: ${PG_PASSWORD}
       DB_USERNAME: ${PG_USER}
+      DB_PASSWORD: ${PG_PASSWORD}
       DB_DATABASE_NAME: immich
     volumes:
       - /volume1/photos:/usr/src/app/upload
