expose NAS photos to Immich

--- a/portainer/stacks/immich/docker-compose.yml
+++ b/portainer/stacks/immich/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       DB_DATABASE_NAME: immich
     volumes:
       - /volume1/photos:/usr/src/app/upload
+      - /volume1/Fotos:/Fotos
       - /etc/localtime:/etc/localtime:ro
     ports:
       - "2283:2283"
