--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -55,7 +55,7 @@ jobs:
         TF_VAR_cloudflare_account_id: ${{ secrets.CF_ACCOUNT_ID }}
         TF_VAR_cloudflare_tld_zone_id: ${{ secrets.CF_TLD_ZONE_ID }}
         TF_VAR_cloudflare_email: ${{ secrets.CF_EMAIL }}
-        TF_VAR_cloudflare_api_key: ${{ secrets.CF_EMAIL }}
+        TF_VAR_cloudflare_api_key: ${{ secrets.CF_API_KEY }}
         TF_VAR_tld: ${{ secrets.TLD }}
 
     - name: Terraform Plan
@@ -66,7 +66,7 @@ jobs:
         TF_VAR_cloudflare_account_id: ${{ secrets.CF_ACCOUNT_ID }}
         TF_VAR_cloudflare_tld_zone_id: ${{ secrets.CF_TLD_ZONE_ID }}
         TF_VAR_cloudflare_email: ${{ secrets.CF_EMAIL }}
-        TF_VAR_cloudflare_api_key: ${{ secrets.CF_EMAIL }}
+        TF_VAR_cloudflare_api_key: ${{ secrets.CF_API_KEY }}
         TF_VAR_tld: ${{ secrets.TLD }}
 
     - name: Terraform Apply
@@ -78,7 +78,7 @@ jobs:
         TF_VAR_cloudflare_account_id: ${{ secrets.CF_ACCOUNT_ID }}
         TF_VAR_cloudflare_tld_zone_id: ${{ secrets.CF_TLD_ZONE_ID }}
         TF_VAR_cloudflare_email: ${{ secrets.CF_EMAIL }}
-        TF_VAR_cloudflare_api_key: ${{ secrets.CF_EMAIL }}
+        TF_VAR_cloudflare_api_key: ${{ secrets.CF_API_KEY }}
         TF_VAR_tld: ${{ secrets.TLD }}
 
     - name: Cleanup
