--- a/portainer/stacks/plex/docker-compose.yml
+++ b/portainer/stacks/plex/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  radarr_pgsql:
+  plex:
     container_name: plex
     image: ghcr.io/hotio/plex:release-1.42.2.10156-f737b826c
     environment:
