--- a/portainer/stacks/pocketid/docker-compose.yml
+++ b/portainer/stacks/pocketid/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_URL: ${APP_URL}
       MAXMIND_LICENSE_KEY: ${MAXMIND_LICENSE_KEY}
+      ENCRYPTION_KEY: ${ENCRYPTION_KEY}
       TRUST_PROXY: true
     volumes:
       - /volume2/docker/pocketid/volumes/appdata:/app/data"
