--- a/portainer/stacks/pocketid/docker-compose.yml
+++ b/portainer/stacks/pocketid/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       ENCRYPTION_KEY: ${ENCRYPTION_KEY}
       TRUST_PROXY: true
     volumes:
-      - "/volume2/docker/pocketid/volumes/appd:/app/data"
+      - /volume2/docker/pocketid/volumes/appdata:/app/data
     ports:
       - "1411:1411"
     # Optional healthcheck
