add reauth new pocket id instance

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -59,6 +59,8 @@ jobs:
         TF_VAR_tld: ${{ secrets.TLD }}
         TF_VAR_pocketid_client_id: ${{ secrets.POCKETID_CLIENT_ID }}
         TF_VAR_pocketid_client_secret: ${{ secrets.POCKETID_CLIENT_SECRET }}
+        TF_VAR_pocketid_reauth_client_id: ${{ secrets.POCKETID_REAUTH_CLIENT_ID }}
+        TF_VAR_pocketid_reauth_client_secret: ${{ secrets.POCKETID_REAUTH_CLIENT_SECRET }}
 
     - name: Terraform Plan
       run: terraform plan -out=tfplan
@@ -72,6 +74,8 @@ jobs:
         TF_VAR_tld: ${{ secrets.TLD }}
         TF_VAR_pocketid_client_id: ${{ secrets.POCKETID_CLIENT_ID }}
         TF_VAR_pocketid_client_secret: ${{ secrets.POCKETID_CLIENT_SECRET }}
+        TF_VAR_pocketid_reauth_client_id: ${{ secrets.POCKETID_REAUTH_CLIENT_ID }}
+        TF_VAR_pocketid_reauth_client_secret: ${{ secrets.POCKETID_REAUTH_CLIENT_SECRET }}
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
@@ -86,6 +90,8 @@ jobs:
         TF_VAR_tld: ${{ secrets.TLD }}
         TF_VAR_pocketid_client_id: ${{ secrets.POCKETID_CLIENT_ID }}
         TF_VAR_pocketid_client_secret: ${{ secrets.POCKETID_CLIENT_SECRET }}
+        TF_VAR_pocketid_reauth_client_id: ${{ secrets.POCKETID_REAUTH_CLIENT_ID }}
+        TF_VAR_pocketid_reauth_client_secret: ${{ secrets.POCKETID_REAUTH_CLIENT_SECRET }}
 
     - name: Cleanup
       if: always()
