--- a/portainer/stacks/upload-assistant/docker-compose.yml
+++ b/portainer/stacks/upload-assistant/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       UA_WEBUI_HOST: "0.0.0.0"
       UA_WEBUI_PORT: "5000"
       UA_BROWSE_ROOTS: "/data/torrents,/Upload-Assistant/tmp"
-      # UA_WEBUI_CORS_ORIGINS: "https://your-ui-host"
+      UA_WEBUI_CORS_ORIGINS: ${UA_WEBUI_CORS_ORIGINS}
     ports: 
-      - "1590:5000" #change left side to your specific port.
+      - "1590:5000"
     volumes:
       - /volume1/data:/data
       - /volume2/docker/qbittorrent/volumes/config/data/BT_backup/:/torrent_storage_dir
