move google idps to tf

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -66,6 +66,10 @@ jobs:
         TF_VAR_pocketid_client_secret: ${{ secrets.POCKETID_CLIENT_SECRET }}
         TF_VAR_pocketid_reauth_client_id: ${{ secrets.POCKETID_REAUTH_CLIENT_ID }}
         TF_VAR_pocketid_reauth_client_secret: ${{ secrets.POCKETID_REAUTH_CLIENT_SECRET }}
+        TF_VAR_google_client_id: ${{ secrets.GOOGLE_CLIENT_ID }}
+        TF_VAR_google_client_secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+        TF_VAR_google_workspace_client_id: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_ID }}
+        TF_VAR_google_workspace_client_secret: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_SECRET }}
 
     - name: Terraform Plan
       run: terraform plan -out=tfplan
@@ -82,6 +86,10 @@ jobs:
         TF_VAR_pocketid_client_secret: ${{ secrets.POCKETID_CLIENT_SECRET }}
         TF_VAR_pocketid_reauth_client_id: ${{ secrets.POCKETID_REAUTH_CLIENT_ID }}
         TF_VAR_pocketid_reauth_client_secret: ${{ secrets.POCKETID_REAUTH_CLIENT_SECRET }}
+        TF_VAR_google_client_id: ${{ secrets.GOOGLE_CLIENT_ID }}
+        TF_VAR_google_client_secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+        TF_VAR_google_workspace_client_id: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_ID }}
+        TF_VAR_google_workspace_client_secret: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_SECRET }}
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
@@ -99,6 +107,10 @@ jobs:
         TF_VAR_pocketid_client_secret: ${{ secrets.POCKETID_CLIENT_SECRET }}
         TF_VAR_pocketid_reauth_client_id: ${{ secrets.POCKETID_REAUTH_CLIENT_ID }}
         TF_VAR_pocketid_reauth_client_secret: ${{ secrets.POCKETID_REAUTH_CLIENT_SECRET }}
+        TF_VAR_google_client_id: ${{ secrets.GOOGLE_CLIENT_ID }}
+        TF_VAR_google_client_secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+        TF_VAR_google_workspace_client_id: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_ID }}
+        TF_VAR_google_workspace_client_secret: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_SECRET }}
 
     - name: Cleanup
       if: always()
