create list for egress IPs

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -70,6 +70,7 @@ jobs:
         TF_VAR_google_client_secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         TF_VAR_google_workspace_client_id: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_ID }}
         TF_VAR_google_workspace_client_secret: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_SECRET }}
+        TF_VAR_egress_ips_json: ${{ secrets.EGRESS_IPS_JSON }}
 
     - name: Terraform Plan
       run: terraform plan -out=tfplan
@@ -90,6 +91,7 @@ jobs:
         TF_VAR_google_client_secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         TF_VAR_google_workspace_client_id: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_ID }}
         TF_VAR_google_workspace_client_secret: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_SECRET }}
+        TF_VAR_egress_ips_json: ${{ secrets.EGRESS_IPS_JSON }}
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
@@ -111,6 +113,7 @@ jobs:
         TF_VAR_google_client_secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
         TF_VAR_google_workspace_client_id: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_ID }}
         TF_VAR_google_workspace_client_secret: ${{ secrets.GOOGLE_WORKSPACE_CLIENT_SECRET }}
+        TF_VAR_egress_ips_json: ${{ secrets.EGRESS_IPS_JSON }}
 
     - name: Cleanup
       if: always()
