--- a/portainer/stacks/postfix/docker-compose.yml
+++ b/portainer/stacks/postfix/docker-compose.yml
@@ -4,8 +4,9 @@ services:
     image: boky/postfix:5.1.0
     restart: unless-stopped
     environment:
+      - HOSTNAME="postfix"
       - RELAYHOST=smtp.gmail.com:587
-      - MYNETWORKS=127.0.0.0/8 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16
+      - POSTFIX_mynetworks="127.0.0.0/8 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16"
       - RELAYHOST_USERNAME=${RELAYHOST_USERNAME}
       - RELAYHOST_PASSWORD=${RELAYHOST_PASSWORD}
       - ALLOWED_SENDER_DOMAINS=${ALLOWED_SENDER_DOMAINS}
