--- a/portainer/stacks/postfix/docker-compose.yml
+++ b/portainer/stacks/postfix/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - RELAYHOST_USERNAME=${RELAYHOST_USERNAME}
       - RELAYHOST_PASSWORD=${RELAYHOST_PASSWORD}
       - ALLOWED_SENDER_DOMAINS=${ALLOWED_SENDER_DOMAINS}
-      - INBOUND_DEBUGGING = true
+      - SMTPD_SASL_USERS=${SMTPD_SASL_USERS}
     ports:
       - "1589:587"
     networks:
